Fix overflowing header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,6 +11,7 @@
   z-index: 9999;
   background-color: white;
   margin-bottom: -36px;
+  box-sizing: border-box;
 
   @include horizontal-padding-on-mobile;
 
